--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+  <div class="container">
+    <div class="logo">
+      <%= link_to "Rant.ly", root_path %>
+    </div>
+    <div class="login">
+      <%= link_to "Login", root_path %>
+    </div>
+    <button class="join">
+      <%=  "Join" %>
+    </button>
 
+  </div>
+</header>
 <%= yield %>
 
+
+<div id="wrapper">
+  <p>"Rantly has allowed a certain freedom I never thought possible.  Now I can rant to the internet at large, without having to worry about my thoughts.  I just type it out, hit click, and feel the surge of relief.  Thanks Rantly, you've truly made my most inane rants heard.  I remember a time when I wasn't able to truly express myself.  It's really frustrating when you want to be heard and no one..."</p>
+</div>
 </body>
 </html>
