--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,22 +15,15 @@
     <div class="login">
       <%= link_to "Login", root_path %>
     </div>
-    <button class="join">
-      <%= "Join" %>
-    </button>
+    <div class="join">
+      <%= link_to "Join", new_user_path %>
+    </div>
 
   </div>
 </header>
 <%= yield %>
 
 
-<div id="wrapper">
-  <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
 
-  <p>"Rantly has allowed a certain freedom I never thought possible. Now I can rant to the internet at large, without
-    having to worry about my thoughts. I just type it out, hit click, and feel the surge of relief. Thanks Rantly,
-    you've truly made my most inane rants heard. I remember a time when I wasn't able to truly express myself. It's
-    really frustrating when you want to be heard and no one..."</p>
-</div>
 </body>
 </html>
