--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= link_to "Rant.ly", root_path %>
     </div>
     <div class="login">
-      <%= link_to "Login", root_path %>
+      <%= link_to "Login", login_path %>
     </div>
     <div class="join">
       <%= link_to "Join", new_user_path %>
