--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,14 @@
 <h1>Register</h1>
 
 <%= form_for @user do |f| %>
-<div>
-  <%= f.label :username %>
-  <%= f.text_field :username, autofocus: true %>
-</div>
-<div>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-</div>
+  <div>
+    <%= f.label :username %>
+    <%= f.text_field :username, autofocus: true %>
+  </div>
+  <div>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
 
   <div>
     <%= f.label :first_name %>
@@ -16,13 +16,24 @@
   </div>
 
   <div>
-    <%=f.label :last_name %>
+    <%= f.label :last_name %>
     <%= f.text_field :last_name %>
   </div>
 
   <div>
     <%= f.label :bio %>
     <%= f.text_field :bio %>
+  </div>
+
+  <div>
+    <%= "How often do you rant?" %>
+    <br>
+    <%= f.label :Daily %>
+    <%= f.radio_button :frequency, :daily %>
+    <%= f.label :Weekly %>
+    <%= f.radio_button :frequency, :weekly %>
+    <%= f.label :Monthly %>
+    <%= f.radio_button :frequency, :monthly %>
   </div>
 
   <div>
