--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,44 +1,59 @@
-<h3>Register</h3>
+<div class="register-box">
 
-<%= form_for @user do |f| %>
-  <div>
-    <%= f.label :username %>
-    <%= f.text_field :username, autofocus: true %>
-  </div>
-  <div>
-    <%= f.label :password %>
-    <%= f.password_field :password %>
+  <div class="">
+  <h3>Register</h3>
   </div>
 
-  <div>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
-  </div>
+  <%= form_for @user do |f| %>
 
-  <div>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
 
-  <div>
-    <%= f.label :bio %>
-    <%= f.text_field :bio %>
-  </div>
+    <div class="doubles">
+      <div class="row">
+        <%= f.label :username %>
+        <%= f.label :password %>
+      </div>
+      <div class="row">
+        <%= f.text_field :username, autofocus: true %>
+        <%= f.password_field :password %>
+      </div>
+    </div>
 
-  <div>
-    <%= "How often do you rant?" %>
+
     <br>
-    <%= f.label :Daily %>
-    <%= f.radio_button :frequency, :daily %>
-    <%= f.label :Weekly %>
-    <%= f.radio_button :frequency, :weekly %>
-    <%= f.label :Monthly %>
-    <%= f.radio_button :frequency, :monthly %>
-  </div>
 
-  <div>
-    <%= f.submit "REGISTER" %>
-  </div>
+    <div class="doubles">
+      <div class="row">
+        <%= f.label :first_name %>
+        <%= f.label :last_name %>
+      </div>
+      <div class="row">
+        <%= f.text_field :first_name %>
+        <%= f.text_field :last_name %>
+      </div>
+    </div>
 
 
-<% end %>
+    <div>
+      <%= f.label :bio %>
+      <br>
+      <%= f.text_area :bio, 'resize' => 'none' %>
+    </div>
+
+    <div>
+      <%= "How often do you rant?" %>
+      <br>
+      <%= f.label :Daily %>
+      <%= f.radio_button :frequency, :daily %>
+      <%= f.label :Weekly %>
+      <%= f.radio_button :frequency, :weekly %>
+      <%= f.label :Monthly %>
+      <%= f.radio_button :frequency, :monthly %>
+    </div>
+
+    <div class="register-button">
+      <%= f.submit "REGISTER" %>
+    </div>
+
+
+  <% end %>
+</div>
