--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="register-box">
 
   <div class="">
-  <h3>Register</h3>
+    <h3>Register</h3>
   </div>
 
   <%= form_for @user do |f| %>
@@ -50,8 +50,8 @@
       <%= f.radio_button :frequency, :monthly %>
     </div>
 
-    <div class="register-button">
-      <%= f.submit "REGISTER" %>
+    <div>
+      <%= f.submit "REGISTER", :class => 'button' %>
     </div>
 
 
