--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,25 +12,29 @@
     <div class="logo">
       <%= link_to "Rant.ly", root_path %>
     </div>
-    <div class="middle">
-
-    </div>
-    <div class="right">
-      <div class="login">
-        <% if session[:user_id] %>
-          <%= link_to "Logout", logout_path %>
-        <% else %>
-          <%= link_to "Login", login_path %>
-        <% end %>
+      <% if session[:user_id] %>
+      <div class="middle">
+        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", root_path %> | <%= link_to "Favorites", root_path %> | <%= link_to "Search", root_path %>
+        </div>
+        <div class="right">
+          <div class="join">
+            <%= link_to "Logout", logout_path %>
+          </div>
+      <% else %>
+        <div class="right">
+          <div class="login">
+            <%= link_to "Login", login_path %>
+          </div>
+          <div class="join">
+            <%= link_to "Join", new_user_path %>
+          </div>
+      <% end %>
       </div>
-      <div class="join">
-        <%= link_to "Join", new_user_path %>
       </div>
-    </div>
-  </div>
+      </div>
 </header>
-<%= yield %>
 
+<%= yield %>
 
 </body>
 </html>
