--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,59 +1,61 @@
-<div class="register-box">
+<div class="gray">
+  <div class="register-box">
 
-  <div class="">
-    <h3>Register</h3>
+    <div class="">
+      <h3>Register</h3>
+    </div>
+
+    <%= form_for @user do |f| %>
+
+
+      <div class="doubles">
+        <div class="row">
+          <%= f.label :username %>
+          <%= f.label :password %>
+        </div>
+        <div class="row">
+          <%= f.text_field :username, autofocus: true %>
+          <%= f.password_field :password %>
+        </div>
+      </div>
+
+      <br>
+
+      <div class="doubles">
+        <div class="row">
+          <%= f.label :first_name %>
+          <%= f.label :last_name %>
+        </div>
+        <div class="row">
+          <%= f.text_field :first_name %>
+          <%= f.text_field :last_name %>
+        </div>
+      </div>
+
+      <div class="bio">
+        <%= f.label :bio %>
+      </div>
+      <div class="bio-box">
+        <%= f.text_area :bio, :rows => 20 %>
+      </div>
+
+      <div class="time">
+        <%= "How often do you rant?" %>
+      </div>
+      <div class="frequency">
+        <%= f.label :Daily %>
+        <%= f.radio_button :frequency, :daily %>
+
+        <%= f.label :Weekly %>
+        <%= f.radio_button :frequency, :weekly %>
+
+        <%= f.label :Monthly %>
+        <%= f.radio_button :frequency, :monthly %>
+      </div>
+      <div>
+        <%= f.submit "REGISTER", :class => 'button' %>
+      </div>
+
+    <% end %>
   </div>
-
-  <%= form_for @user do |f| %>
-
-
-    <div class="doubles">
-      <div class="row">
-        <%= f.label :username %>
-        <%= f.label :password %>
-      </div>
-      <div class="row">
-        <%= f.text_field :username, autofocus: true %>
-        <%= f.password_field :password %>
-      </div>
-    </div>
-
-
-    <br>
-
-    <div class="doubles">
-      <div class="row">
-        <%= f.label :first_name %>
-        <%= f.label :last_name %>
-      </div>
-      <div class="row">
-        <%= f.text_field :first_name %>
-        <%= f.text_field :last_name %>
-      </div>
-    </div>
-
-
-    <div>
-      <%= f.label :bio %>
-      <br>
-      <%= f.text_area :bio, 'resize' => 'none' %>
-    </div>
-
-    <div>
-      <%= "How often do you rant?" %>
-      <br>
-      <%= f.label :Daily %>
-      <%= f.radio_button :frequency, :daily %>
-      <%= f.label :Weekly %>
-      <%= f.radio_button :frequency, :weekly %>
-      <%= f.label :Monthly %>
-      <%= f.radio_button :frequency, :monthly %>
-    </div>
-
-    <div>
-      <%= f.submit "REGISTER", :class => 'button' %>
-    </div>
-
-
-  <% end %>
 </div>
