--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -2,32 +2,40 @@
   <div class="rant-input-left">
     <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
     <br>
+
     <div class="user">
-    <%= link_to @user.username %>
+      <%= link_to @user.username, edit_user_path(@user) %>
     </div>
     <div>
-      <%= form_for [@user, @rant] do |f| %>
-        <div class="about">
-          <%= f.label :topic, "A rant about:" %>
-          <br>
-          <%= f.text_field :topic, autofocus: true %>
-        </div>
-        <br>
-
-        <div>
-          <%= f.label :rant, "Rant:" %>
-          <br>
-          <%= f.text_area :rant, :rows => 20, autofocus: true %>
-        </div>
-        <br>
-
-        <div>
-          <%= f.submit "RANT", class: 'button' %>
-        </div>
-      <% end %>
+      <%= render 'rants/form' %>
     </div>
   </div>
   <div class="latest-rants">
     <h3>Latest Rants</h3>
+
+    <% @users.each do |user| %>
+      <ul>
+        <%= user.first_name %>
+      </ul>
+    <% end %>
+
+    <h3>My Rants</h3>
+    <ul>
+      <div class="rants">
+        <div class="ranter">
+          <%= @user.first_name %>
+<br>
+          <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
+
+        </div>
+        <div class="rant-paragraph">
+
+          <% @user.rants.each do |rant| %>
+              <%= rant.rant %><%= link_to "Delete", user_rant_path(@user,rant), method: :delete %>
+          <% end %>
+
+        </div>
+      </div>
+    </ul>
   </div>
 </div>
