--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,26 +12,27 @@
     <div class="logo">
       <%= link_to "Rant.ly", root_path %>
     </div>
-      <% if session[:user_id] %>
+    <% if session[:user_id] %>
       <div class="middle">
-        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", root_path %> | <%= link_to "Favorites", root_path %> | <%= link_to "Search", root_path %>
+        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", root_path %>
+        | <%= link_to "Favorites", root_path %> | <%= link_to "Search", root_path %>
+      </div>
+      <div class="right">
+        <div class="join">
+          <%= link_to "Logout", logout_path %>
         </div>
-        <div class="right">
-          <div class="join">
-            <%= link_to "Logout", logout_path %>
-          </div>
-      <% else %>
-        <div class="right">
-          <div class="login">
-            <%= link_to "Login", login_path %>
-          </div>
-          <div class="join">
-            <%= link_to "Join", new_user_path %>
-          </div>
-      <% end %>
-      </div>
-      </div>
-      </div>
+    <% else %>
+      <div class="right">
+        <div class="login">
+          <%= link_to "Login", login_path %>
+        </div>
+        <div class="join">
+          <%= link_to "Join", new_user_path %>
+        </div>
+    <% end %>
+    </div>
+    </div>
+  </div>
 </header>
 
 <%= yield %>
