--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -64,7 +64,7 @@
           <%= f.radio_button :frequency, :monthly %>
         </div>
         <div>
-          <%= f.submit "REGISTER", :class => 'button' %>
+          <%= f.submit "Update Profile", :class => 'button' %>
         </div>
 
       <% end %>
