--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="intro">
     <div class="picture">
-      <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg"/>
+      <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width="100" height="100"/>
     </div>
     <div class="paragraph">
       "Rantly has allowed a certain freedom I never thought possible. Now I can rant to the internet at large,
