--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,23 +12,16 @@
       <h5>Let it all out</h5>
     </div>
   </div>
-  <div class="intro">
-    <div class="picture">
-      <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width="100" height="100"/>
+
+    <div style="position: absolute; left: 250px; top: 550px;">
+      <img src="https://avatars2.githubusercontent.com/u/161737?v=2&s=460" width="150" height="150"/>
     </div>
-    <div class="paragraph">
-      "Rantly has allowed a certain freedom I never thought possible. Now I can rant to the internet at large,
-      without
-      having to worry about my thoughts. I just type it out, hit click, and feel the surge of relief. Thanks Rantly,
-      you've truly made my most inane rants heard. I remember a time when I wasn't able to truly express myself. It's
-      really frustrating when you want to be heard and no one..."
-      <br><br>
-      | Jeff Taggart, avid Ranter
-    </div>
+    <p style="width: 750px; position: absolute; left: 425px; top: 550px;">"Rantly has allowed a certain freedom I never
+      thought possible. Now I can rant to the internet
+      at large, without having to worry about my thoughts. I just type it out, hit click, and feel the surge
+      of relief. Thanks Rantly, you've truly made my most inane rants heard. I remember a time when I wasn't
+      able to truly express myself. It's really frustrating when you want to be heard and no one..."</p>
+
+    <p style="position: absolute; left: 425px; top: 650px;">| Jeff Taggart, avid Ranter</p>
+
   </div>
-</div>
-
-
-
-
-
