--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
         </div>
              <%= rant.rant %>
              <br>
-             <%= link_to "Delete", user_rant_path(@user, rant), method: :delete %>
+             <!--<%= link_to "Delete", user_rant_path(@user, rant), method: :delete %>-->
       <% end %>
          </div>
       </div>
