new stories added

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -169,6 +169,7 @@
   justify-content: space-around;
   align-items: baseline;
 
+
   .ranter {
     display: flex;
 
@@ -228,10 +229,10 @@
   text-align: center;
 
 }
-//
-//.topic {
-//  font-weight: bold;
-//}
+
+.topic {
+  font-weight: bold;
+}
 
 header {
   background: black;
