--- a/app/views/rants/_form.html.erb
+++ b/app/views/rants/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="rant-form">
 <%= form_for [@user, @rant] do |f| %>
   <div class="about">
     <%= f.label :topic, "A rant about:" %>
