--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,11 +42,13 @@
   flex: 0 0 10rem;
   font-size: 24pt;
   border-right: solid lawngreen;
+  font-family: sans-serif;
 }
 
 .middle {
   flex: 1 1 auto;
   text-align: right;
+  font-family: sans-serif;
 }
 
 .right {
@@ -54,12 +56,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: sans-serif;
 }
 
 .login {
   flex: 1 1 auto;
   text-align: center;
   font-size: 20pt;
+  font-family: sans-serif;
 }
 
 .join {
@@ -67,6 +71,7 @@
   font-size: 24pt;
   background-color: lawngreen;
   text-align: center;
+  font-family: sans-serif;
 }
 
 .register-box {
@@ -167,40 +172,38 @@
 .latest-rants {
   width: 75%;
   background-color: white;
+  padding: 10px;
 
 }
 
-//.dashboard {
-//  display: flex;
-//  flex-direction: row;
-//}
+.dashboard {
+  display: flex;
+  flex-direction: row;
+}
 
-//
-//.rants {
-//  display: flex;
-//  flex-direction: row;
-//  justify-content: space-around;
-//  align-items: baseline;
 
-//
+.rants {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: baseline;
+
+
 //  .ranter {
 //    display: flex;
 //
 //  }
-//
-//  .rant-paragraph {
-//    display: flex;
-//    padding: .5rem;
-//    flex-direction: column;
-//    max-width: 700px;
-//  }
-//
+
+  .rant-paragraph {
+    max-width: 700px;
+  }
+
 //  .lines {
 //    display: flex;
 //    justify-content: center;
 //
 //  }
-//}
+}
 
 .button {
   font-size: 24pt;
@@ -273,12 +276,31 @@ h1 {
   margin-right: auto;
   font-size: 50px;
   font-family: sans-serif;
+  border-bottom: solid black;
 }
 
 
 h3 {
+ text-align: center;
   font-size: 50px;
   font-family: sans-serif;
+  border-bottom: solid black;
+
+}
+
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 24pt;
+  display: inline;
+  float: left;
+  font-family: sans-serif;
+
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
 
 h5 {
@@ -307,4 +329,27 @@ body {
 img {
   display: block;
   margin: auto;
+}
+
+.other-img {
+  float: left;
+  margin-left: 50px;
+}
+
+p {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: sans-serif;
+  text-decoration: none;
+
+  a {
+    text-decoration: none;
+    color: black
+  }
+}
+
+.favorite {
+  float: right;
+  padding-right: 4rem;
 }
