--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,20 +4,21 @@
   </div>
 
   <div class="latest-rants">
-
+    <div class="favorite"><%= link_to "Unfollow" %></div>
     <h1><%= @user.first_name + " " + @user.last_name %></h1>
 
-    <div class="float-right"><%= link_to "Unfollow" %></div>
 
     <div class="line"></div>
 
-    <div class="float-left">
+    <div class="other-img">
       <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05_400x400.jpeg" width=150px height=150px/>
     </div>
-    <h3><%= @user.frequency.capitalize + " " + "Ranter" %></h3>
+    <h4><%= @user.frequency.capitalize + " " + "Ranter" %></h4>
+    <br>
+    <br>
 
-    <%= @user.bio %>
-<br>
+    <p><%= @user.bio %></p>
+    <br>
     <br>
 
     <div class="rants">
