--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,39 +5,28 @@
 
   <div class="latest-rants">
     <div class="favorite"><%= link_to "Unfollow" %></div>
-    <h1><%= @user.first_name + " " + @user.last_name %></h1>
-
-
-    <div class="line"></div>
-
-    <div class="other-img">
-      <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05_400x400.jpeg" width=150px height=150px/>
-    </div>
-    <h4><%= @user.frequency.capitalize + " " + "Ranter" %></h4>
-    <br>
-    <br>
-
-    <p><%= @user.bio %></p>
-    <br>
-    <br>
+    <h3><%= @user.first_name + " " + @user.last_name %></h3>
 
     <div class="rants">
-      <div class="ranter">
-
-        <div class="rant-paragraph">
-          <% @user.rants.each do |rant| %>
-
-            <div class="topic">
-              <%= rant.topic.capitalize %>
-            </div>
-            <%= rant.rant %>
-            <div class="float-right"><%= link_to "Favorite" %></div>
-
-          <% end %>
-
-        </div>
-
+      <div class="other-img">
+        <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05_400x400.jpeg" width=150px height=150px/>
       </div>
+      <h1><%= @user.frequency.capitalize + " " + "Ranter" %></h1>
+      <br>
+      <br>
+    </div>
+    <div class="font">
+      <div class="topic">Bio:</div> <%= @user.bio %>
+      <br>
+      <br>
+
+      <% @user.rants.each do |rant| %>
+        <div class="topic">
+          <%= rant.topic.capitalize %>
+        </div>
+        <%= rant.rant %>
+        <div class="favorite"><%= link_to "Favorite" %></div>
+      <% end %>
     </div>
   </div>
 </div>
