--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,6 +174,7 @@
   background-color: white;
   padding: 10px;
 
+
 }
 
 .dashboard {
@@ -206,6 +207,36 @@
   background-color: lawngreen;
   border: solid black;
 
+}
+
+.spam {
+  display: inline;
+  padding: 5px;
+  font-size: 20pt;
+  width: 100%;
+  height: 40px;
+  background-color: red;
+  border: solid black;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
+}
+
+.tweet {
+  display: inline;
+  padding: 5px;
+  font-size: 20pt;
+  width: 100%;
+  height: 40px;
+  background-color: deepskyblue;
+  border: solid black;
+
+  a {
+    text-decoration: none;
+    color: white;
+  }
 }
 
 .flash {
