--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Rantly</title>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -14,7 +14,7 @@
     </div>
     <% if session[:user_id] %>
       <div class="middle">
-        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", root_path %>
+        <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", user_follows_path(current_user.id) %>
         | <%= link_to "Favorites", root_path %> | <%= link_to "Search", root_path %>
       </div>
       <div class="right">
