--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,14 @@
       <h3>Register</h3>
     </div>
     <%= form_for @user do |f| %>
+
+      <% if @user.errors.any? %>
+        <% @user.errors.full_messages.each do |message| %>
+         <li> <%= message %> </li>
+        <% end %>
+      <% end %>
+
+
       <div class="doubles">
         <div class="row">
           <%= f.label :username %>
