--- a/app/views/follows/index.html.erb
+++ b/app/views/follows/index.html.erb
@@ -16,9 +16,9 @@
   <div class="latest-rants">
     <h1>Following</h1>
 
-    <% @follows.each do |f| %>
-      <%= f.user.username %>
-        <%= link_to "Unfollow", user_follow_path(current_user.id, @follows), method: :delete %>
+    <% @follows.each do |follow| %>
+      <%= follow.user.username %>
+        <%= link_to "Unfollow", user_follow_path(current_user, follow), method: :delete %>
       <% end  %>
 
   </div>
