--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,14 @@
 <header>
   <div class="container">
     <div class="logo">
-      <%= link_to "Rant.ly", root_path %>
+      <% if current_user  %>
+      <%= link_to "Rant.ly", dashboard_path %>
+        <% end  %>
     </div>
     <% if session[:user_id] %>
       <div class="middle">
         <%= link_to "Dashboard", dashboard_path %> | <%= link_to "Following", user_follows_path(current_user.id) %>
-        | <%= link_to "Favorites", root_path %> | <%= link_to "Search", root_path %>
+        | <%= link_to "Favorites", dashboard_path %> | <%= link_to "Search", root_path %>
       </div>
       <div class="right">
         <div class="join">
