--- a/app/views/rants/show.html.erb
+++ b/app/views/rants/show.html.erb
@@ -41,6 +41,11 @@
     <br>
 
     <p><%= @rant.rant %></p>
+    <% unless favorited(@rant) %>
+      <%= link_to "Favorite", favorite_path(@rant.user, @rant) %>
+    <% else %>
+      <%= link_to "Unfavorite", unfavorite_path(@rant.user, @rant) %>
+    <% end  %>
 
 
   </div>
