--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,1 +1,24 @@
-hi
+<div class="dashboard">
+  <div class="rant-input-left">
+    <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
+    <br>
+
+    <div class="user">
+      <%= link_to current_user.username, edit_user_path(current_user) %>
+    </div>
+    <% if alert %>
+      <%= alert %>
+    <% end %>
+    <div>
+      <%= render 'rants/form' %>
+    </div>
+  </div>
+
+  <div class="latest-rants">
+    <h1>Favorites</h1>
+
+    <% @favorites.each do |favorite| %>
+      <%= favorite.rant.rant %>
+    <% end %>
+  </div>
+</div>
