--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,6 +2,7 @@
   <div class="rant-input-left">
     <img src="https://pbs.twimg.com/profile_images/3640983126/2eab5ffd09240704352ac1b689e08d05.jpeg" width=100px height=100px/>
     <br>
+
     <div class="user">
       <%= link_to current_user.username, edit_user_path(current_user) %>
     </div>
@@ -14,12 +15,13 @@
   </div>
 
   <div class="latest-rants">
-    <h1>Following</h1>
+    <h3>Search</h3>
 
-    <% @follows.each do |follow| %>
-      <%= follow.user.username %>
-      <%= link_to "Unfollow", user_follow_path(current_user, follow), method: :delete %>
-    <% end  %>
+    <%= form_tag("/search", method: "get") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "search something" %>
+     <%= submit_tag "Search" %>
+    <% end %>
+
 
   </div>
 </div>
