--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,11 @@
     <div class="letitout">
       <h5>Let it all out</h5>
     </div>
+    <% if @user != current_user %>
+    <div class="welcome-back">HIHIHIHI</div>
+      <% end %>
   </div>
+
 
     <div style="position: absolute; left: 250px; top: 550px;">
       <img src="https://avatars2.githubusercontent.com/u/161737?v=2&s=460" width="150" height="150"/>
