--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,8 @@
     display: flex;
     background-color: white;
     flex-direction: column;
-    padding: 4rem;
+//    padding: 4rem;
+    padding-bottom: 0;
 
   }
 
@@ -41,7 +42,7 @@
 .logo {
   flex: 0 0 10rem;
   font-size: 24pt;
-  border-right: solid lawngreen;
+  border-right: solid green;
   font-family: sans-serif;
 }
 
@@ -69,7 +70,7 @@
 .join {
   flex: 2 1 auto;
   font-size: 24pt;
-  background-color: lawngreen;
+  background-color: green;
   text-align: center;
   font-family: sans-serif;
 }
@@ -204,7 +205,7 @@
   font-size: 24pt;
   width: 100%;
   height: 60px;
-  background-color: lawngreen;
+  background-color: green;
   border: solid black;
 
 }
@@ -379,4 +380,13 @@ p {
 
 .font {
   font-family: sans-serif;
+}
+
+.welcome-back {
+  background-color: green;
+  color: white;
+  text-align: center;
+  height: 3rem;
+  width: 100%;
+
 }
